--- a/templates/ticketUserTemplate.html
+++ b/templates/ticketUserTemplate.html
@@ -14,6 +14,7 @@
 
   <div ng-switch-when="tickets" class="tabcontent">
     <h2>Meine Tickets</h2>
+    <div ng-click="ticket_info=!ticket_info" class="info-icon"></div>
       <div id="ticket-listing" class="ticket-list">
         <p ng-if="!tickets && !notickets">Loading... </p>
         <p ng-if="notickets && !unauthorized">Keine Tickets</p>      <!-- totoranslate -->
@@ -27,6 +28,7 @@
             <p class="ticket-content">{{LOCAssign.for_device}}: <b>{{ ticket.device_title }}</b></p>
             <div class="status-icon"></div>
             <ng-include src="templates_url + 'ticketUserButtons.html'"></ng-include>
+            <ng-include ng-if="!ticket_info" src="templates_url + 'ticketUserTicketInfo.html'"></ng-include>
           </div>
         </div>
       </div>
@@ -35,11 +37,13 @@
   <!-- Devices -->
 
   <div ng-switch-when="devices" class="tabcontent">
-    <h2>{{LOCAssign.ticket_devices}}</h2>
+    <p ng-if="ticket_system_offline">Ticket-System offline!</p>  <!-- totoranslate -->
+    <h2 ng-hide="ticket_system_offline">{{LOCAssign.ticket_devices}}</h2>
+    <p ng-hide="max_available">Du hast die maximale Anzahl von Tickets gezogen!</p>  <!-- totoranslate -->
     <div id="fl-getticket" class="device-list">
       <div data-ng-repeat="device_type in device_types track by $index"  class="fl-device-element get-ticket"  
       style="border: 6px solid {{device_type.color}}; background-color: {{device_type.color}}"
-      ng-click="addTicketOverlay(device_type)" ng-show="device_type.completed" ng-cloak >
+      ng-click="addTicketOverlay(device_type)" ng-show="max_available && device_type.available" ng-cloak >
         <div class="fl-device-element-content">
           <h2>{{device_type.name}}</h2>
           <!--p>Verfügbare Geräte: <b><?= $number_devices ?></b></br>Wartende Personen: <b><?= $waiting['persons'] ?></b></p-->
