--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -2,40 +2,44 @@ h2 {
     margin-top: 14px;
 }
 
+
+
+/* ------------------------------------------------------------ */
+/* overwrite xtheme */
+/* ------------------------------------------------------------ */
+
+a:focus, select:focus, input[type="file"]:focus, input[type="radio"]:focus, input[type="submit"]:focus, input[type="checkbox"]:focus {
+    outline: 0 none;
+}
+
 /* ------------------------------------------------------------ */
 /* Logout Button */
 /* ------------------------------------------------------------ */
 
  /* The switch - the box around the slider */
 .logout-button {
-  position: absolute;
-  top: 20px;
-  right : 20px;
+    cursor: pointer !important;
+    position: absolute;
+    padding-top: 60px;
+    padding-right: 60px;
+    top: 0;
+    right: 0;
 }
-
-.logout-button input[type=submit] {
-    border: 1px solid #ccc;
-    background: #ccc;
-    color: #fff;
-    text-transform: none;
-    padding: 6px 12px;
-    font-weight: normal;
-    border-radius: 4px;
-    transition: all 0.2s ease;
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    display: inline-block;
-    margin-right: 2px;
-    margin-bottom: 4px;
-    box-shadow: none;
-    text-shadow: none;
+.logout-button:hover {
+    opacity: 0.7;
 }
-
-.logout-button input[type=submit]:hover {
-    border: 1px solid #888;
-    background: none;
+.logout-button p {
     color: #888;
-    cursor: pointer;
+}
+
+.logout-button p::before {
+    content: "";
+    background: url('status_icons.svg') -500px 50px;
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-top: -12px;
+    padding-left: 6px;
 }
 
 /* ------------------------------------------------------------ */
