--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -16,14 +16,28 @@ a:focus, select:focus, input[type="file"]:focus, input[type="radio"]:focus, inpu
 /* Logout Button */
 /* ------------------------------------------------------------ */
 
- /* The switch - the box around the slider */
-.logout-button {
-    cursor: pointer !important;
+
+.user-headder {
     position: absolute;
     padding-top: 60px;
     padding-right: 66px;
     top: 0;
     right: 0;
+    overflow: hidden;
+}
+
+.user-info {
+    float: left;
+    position: relative;
+    margin-right: 10px;
+    color: #028F76;
+
+}
+
+.logout-button {
+    float: left;
+    position: relative;
+    cursor: pointer !important;
 }
 .logout-button:hover {
     opacity: 0.7;
