+ add nfc-login failed notification

--- a/templates/nfcLoginTemplate.html
+++ b/templates/nfcLoginTemplate.html
@@ -5,7 +5,8 @@
 <div class="nfc-overlay" ng-if="overlay.show">
   <div class="nfc-overlay-content" ng-show="overlay.show">
     <a ng-click="overlay.show=false" class="close">x</a>
-    <h2>Jetzt Karte auflegen</h2>
+    <h2>Jetzt Karte auflegen</h2>     <!-- totoranslate -->
+      <p style="margin:0">{{overlay.login_message}}</p>
       <img ng-src="{{blog_url}}/wp-content/plugins/fablab-ticket/nfc-login/tucard.png"/>
       <form ng-submit="submitCheckToken()" style="opacity:1; position:absolute;">
         ID:<input type="password" ng-model="overlay.submitcode" focus="true" style="opacity:1">
