+ Login with nfc adaption

--- a/templates/nfcLoginTemplate.html
+++ b/templates/nfcLoginTemplate.html
@@ -1,15 +1,16 @@
-<input ng-click="overlay.show=true" type="submit"  value="Login with TU Graz-Card"/>
+<input ng-click="overlay.show=true" type="submit"  value="Login with NFC-Card"/>
 <p></p>
 
 <!-- Overlay -->
 <div class="nfc-overlay" ng-if="overlay.show">
   <div class="nfc-overlay-content" ng-show="overlay.show">
     <a ng-click="overlay.show=false" class="close">x</a>
-    <h2>Jetzt Karte auflegen</h2>     <!-- totoranslate -->
+    <h2>Jetzt Karte auflegen</h2>     
+      <p style="margin:0">Achtung: Du musst die Karte zuerst zu deinem Account hinzufügen!</p>  <!-- totoranslate -->
       <p style="margin:0">{{overlay.login_message}}</p>
-      <img ng-src="{{blog_url}}/wp-content/plugins/fablab-ticket/nfc-login/tucard.png"/>
-      <form ng-submit="submitCheckToken()" style="opacity:1; position:absolute;">
-        ID:<input type="password" ng-model="overlay.submitcode" focus="true" style="opacity:1">
+      <img ng-src="{{blog_url}}/wp-content/plugins/fablab-ticket/nfc-login/tucard.jpg"/>
+      <form ng-submit="submitCheckToken()" style="opacity:0; position:absolute;">
+        ID:<input type="password" ng-model="overlay.submitcode" focus="true">
       </form> 
   </div>
   <div class="nfc-overlay-background" ng-click="overlay.show=false"></div>
