--- a/templates/ticketUserTemplate.html
+++ b/templates/ticketUserTemplate.html
@@ -79,7 +79,7 @@
     <h4>Persönliche Daten</h4>   <!-- totoranslate -->
     <a  ng-href="{{blog_url}}/wp-admin/profile.php">
     <input type="submit" value="{{LOCAssign.ticket_edit}}"></a>
-    <h4>TU Karte</h4>                      <!-- totoranslate -->
+    <h4>NFC Karte/TU Karte</h4>  <!-- totoranslate -->
     <input type="submit" ng-click="setTokenOverlay()" value="Karte hinzufügen">  <!-- totoranslate -->
     <!--leaflet id="map-simple-map"></leaflet-->
   </div>
