--- a/templates/ticketUserOverlayTemplate.html
+++ b/templates/ticketUserOverlayTemplate.html
@@ -23,8 +23,8 @@
 
   <div ng-switch-when="set_nfc_token">    
      <h2>Jetzt Karte auflegen</h2>
-     <img ng-src="{{blog_url}}/wp-content/plugins/fablab-ticket/nfc-login/tucard.png"/>
-    <form ng-submit="submitSetToken()" style="opacity:1; position:absolute;">
+     <img ng-src="{{blog_url}}/wp-content/plugins/fablab-ticket/nfc-login/tucard.jpg"/>
+    <form ng-submit="submitSetToken()" style="opacity:0; position:absolute;">
     <input type="password" ng-model="overlay.submitcode" focus="true" >
     </form> 
   </div>
