--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -10,6 +10,23 @@ h4 {
 
 
 /* ------------------------------------------------------------ */
+/* nfc login */
+/* ------------------------------------------------------------ */
+
+.nfc-token {
+    opacity: 0; 
+    position: absolute;
+}
+
+.nfc-overlay p {
+    margin: 0;
+    margin-bottom: 4px;
+    color: #028F76;
+}
+
+
+
+/* ------------------------------------------------------------ */
 /* overwrite xtheme */
 /* ------------------------------------------------------------ */
 
